--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "lightgallery": "^2.7.2",
     "swiper": "^11.0.5",
     "vue": "^3.2.13",
+    "vue-easy-lightbox": "^1.16.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
