--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "firebase": "^10.7.1",
     "lightgallery": "^2.7.2",
     "swiper": "^11.0.5",
     "vue": "^3.2.13",
