--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "firebase": "^10.7.1",
+    "jquery": "^3.7.1",
     "lightgallery": "^2.7.2",
     "swiper": "^11.0.5",
     "vue": "^3.2.13",
