--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.7.1",
     "jquery": "^3.7.1",
     "lightgallery": "^2.7.2",
+    "moment": "^2.29.4",
     "swiper": "^11.0.5",
     "vue": "^3.2.13",
     "vue-easy-lightbox": "^1.16.0",
